--- a/pub/NavigationBarGenerator.css
+++ b/pub/NavigationBarGenerator.css
@@ -6,10 +6,17 @@
     text-align: center;
     font-size: 18px;
     padding: 15px;
+    border: 0px;
 }
 
 .NavigationBarGenerator-btns:hover {
     background-color: AliceBlue;
+}
+
+input[type=text] {
+    float: right;
+    width: 20%;
+    border: none;
 }
 
 .NavigationBarGenerator-topBar {
